# backend/swagger.json
@@ -14,11 +14,19 @@
   "tags": [
     {
       "name": "Transactions",
-      "description": "Transaction operations"
+      "description": "Transaction endpoints"
     },
     {
       "name": "Auth",
-      "description": "Auth operations"
+      "description": "Auth endpoints"
+    },
+    {
+      "name": "Categories",
+      "description": "Categories endpoints"
+    },
+    {
+      "name": "Service",
+      "description": "Service endpoints"
     }
   ],
   "schemes": ["http"],
@@ -272,6 +280,74 @@
           },
           "404": {
             "description": "Unauthorized (user not found) / Invalid user / Invalid session",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/categories/": {
+      "get": {
+        "tags": ["Categories"],
+        "summary": "Get a list of default categories",
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "object",
+                "properties": {
+                  "_id": {
+                    "description": "MongoDB ID",
+                    "type": "string"
+                  },
+                  "name": {
+                    "description": "Name of a category",
+                    "type": "string"
+                  },
+                  "__v": {
+                    "type": "integer"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": ["Service"],
+        "summary": "Add an item to the list of default categories",
+        "parameters": [
+          {
+            "name": "Request body",
+            "in": "body",
+            "description": "request",
+            "required": true,
+            "schema": { "$ref": "#/components/schemas/CategoryPost" }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Successful operation",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "_id": {
+                  "description": "MongoDB ID",
+                  "type": "string"
+                },
+                "name": {
+                  "description": "Name of a category",
+                  "type": "string"
+                },
+                "__v": {
+                  "type": "integer"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid service password",
             "content": {}
           }
         }
@@ -567,6 +643,20 @@
           "refreshToken": {
             "type": "string",
             "description": "Refresh token"
+          }
+        }
+      },
+      "CategoryPost": {
+        "required": ["name", "password"],
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "Name of a category you want to add"
+          },
+          "password": {
+            "type": "string",
+            "description": "Service password"
           }
         }
       }
